<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    android:transitionName="layout_transition"
    tools:context="com.comsab.PrintActivity">

    <TextView
        android:id="@+id/initial"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/initial_size"
        android:transitionName="initial_transition" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="print"
        android:text="@string/update_button" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9">

        <LinearLayout
            android:id="@+id/listProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".45"
                    android:text="@string/producerID"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/producer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".55"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".45"
                    android:text="@string/producerCedula"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/producer2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".55"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".45"
                    android:text="@string/producerNAME"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/producerName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".55"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <TextView
                android:id="@+id/productsDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding"
                android:paddingTop="@dimen/padding"
                android:text="@string/productos"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size2"
                android:textStyle="bold" />



        </LinearLayout>

    </ScrollView>


</LinearLayout>